# Drone

./: CMakeLists.txt  README.md  arduino.c  build_script.sh  safe.cpp
include/actuators/: LEDBoard.h
include/communication/: I2C.h  I2CDevice.h
include/filters/: KalmanFilter.h
include/kinematics/: FlightKinematics.h
include/motors/: ESC.h  Motor.h  MotorController.h
include/peripherals/: DigitalPin.h
include/power/: Battery.h  EnergyConsumer.h  PowerDistributionBoard.h
include/sensors/: BarometerSensor.h  IMUSensor.h  TempHumiditySensor.h
include/util/: Util.h
src/: CMakeLists.txt  main.cpp
src/actuators/: CMakeLists.txt  LEDBoard.cpp
src/communication/: CMakeLists.txt  I2C.cpp  I2CDevice.cpp
src/filters/: CMakeLists.txt  KalmanFilter.cpp
src/kinematics/: CMakeLists.txt  FlightKinematics.cpp
src/motors/: CMakeLists.txt  ESC.cpp  Motor.cpp  MotorController.cpp
src/peripherals/: CMakeLists.txt  DigitalPin.cpp
src/power/: Battery.cpp  CMakeLists.txt  EnergyConsumer.cpp  PowerDistributionBoard.cpp
src/sensors/: BarometerSensor.cpp  CMakeLists.txt  IMUSensor.cpp  TempHumiditySensor.cpp
src/simulation/: CMakeLists.txt
